# adamic

./: LICENSE.txt  README.md  setup.cfg  setup.py
adamic/: __init__.py  adamic.py
adamic/adamic.egg-info/: PKG-INFO  SOURCES.txt
env/: pyvenv.cfg
src/adamic/: __init__.py  adamic.py
