[metadata]
name = adamic
version = 0.0.1
author = Ben Moran
author_email = benjamin.moran.287@gmail.com
description = A package to create data dictionaries, given a pandas df
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/redsoxfan0219/adamic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = adamic
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src